# empack

./: .actrc  .env.local.template  .gitignore  ARCHITECTURAL_DECISION_RECORD.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  audit.md  cliff.toml  codecov.yml  empack  empack-architecture.excalidraw  lcov.info  mise.toml  mise.windows.toml  testing-migration-bootstrap.md  testing-migration-context.md
.config/: nextest.toml
.github/act-events/: push.json
.github/workflows/: branch-ci.yml  ci.yml  coverage.yml  post-merge-ci.yml  pr-ci.yml  release.yml  test-minimal.yml  validate.yml
ai-guidelines/: boot.md  commit.md  dev-workflow.md  gemini-boot.md  init.md  plan.md  prose.md  reinit.md  solong-0.md  solong-1.md  solong-2.md  solong-3.md  solong-4.md  solong.md  testing.md  userland.md
crates/empack/: Cargo.toml
crates/empack-lib/: Cargo.toml
crates/empack-lib/src/: lib.rs
crates/empack-lib/src/api/: curseforge.rs  curseforge.test.rs  dependency_cycle_detection.test.rs  dependency_graph.rs  dependency_graph.test.rs  dependency_graph.test.rs.bak  mod.rs  modrinth.rs  modrinth.test.rs  ranked_search.rs  ranked_search.test.rs  remote_resolver.rs  remote_resolver.test.rs  search.rs  search.test.rs
crates/empack-lib/src/application/: cli.rs  cli.test.rs  commands.rs  commands.test.rs  config.rs  env.rs  env.test.rs  exit.rs  loader.rs  loader.test.rs  mod.rs  mod.test.rs  session.rs  session_mocks.rs  session_security.rs  sync.rs  sync.test.rs
crates/empack-lib/src/display/: display.test.rs  interactive.rs  interactive.test.rs  live.rs  live.test.rs  mock.rs  mod.rs  progress.rs  progress.test.rs  providers.rs  status.rs  status.test.rs  structured.rs  structured.test.rs  styling.rs  test_utils.rs
crates/empack-lib/src/empack/: archive.rs  archive.test.rs  builds.rs  builds.test.rs  config.rs  config.test.rs  content.rs  content.test.rs  fuzzy.rs  fuzzy.test.rs  import.rs  import.test.rs  mod.rs  mod.test.rs  packwiz.rs  packwiz.test.rs  parsing.rs  parsing.test.rs  resolved_project.rs  resolved_project.test.rs  restricted_build.rs  restricted_build.test.rs  search.rs  search.test.rs  search_intent.rs  search_intent.test.rs  state.rs  state.test.rs  templates.rs  templates.test.rs  versions.rs  versions.test.rs
crates/empack-lib/src/logger/: mod.rs  mod.test.rs
crates/empack-lib/src/networking/: cache.rs  cache.test.rs  mod.rs  mod.test.rs  network_retry_behavior.test.rs  rate_budget.rs  rate_limit.rs  rate_limit.test.rs
crates/empack-lib/src/platform/: cache.rs  capabilities.rs  mod.rs  mod.test.rs  packwiz_bin.rs
crates/empack-lib/src/primitives/: empack.rs  empack.test.rs  mod.rs  mod.test.rs  networking.rs  platform.rs  project_platform.rs  shared.rs  terminal.rs
crates/empack-lib/src/terminal/: capabilities.rs  capabilities.test.rs  cursor.rs  detection.rs  mod.rs  probing.rs
crates/empack-lib/src/testing/: filesystem.rs  filesystem.test.rs  mod.rs
crates/empack-lib/templates/client/: instance.cfg.template
crates/empack-lib/templates/config/: gitignore-clean.template  gitignore.template  packwizignore.template
crates/empack-lib/templates/github/: release.yml.template  validate.yml.template
crates/empack-lib/templates/server/: install_pack.sh.template  server.properties.template
crates/empack-lib/tests/: config_integration.rs  platform_entrypoint_networking.rs
crates/empack-lib/tests/fixtures/api_responses/: fabric_versions.json  minecraft_manifest.json  neoforge_maven.xml  quilt_versions.json
crates/empack-tests/: Cargo.toml
crates/empack-tests/fixtures/api_responses/: modrinth_search_jei.json  modrinth_search_sodium.json
crates/empack-tests/fixtures/cassettes/curseforge/: categories_minecraft.json  files_238222.json  fingerprint_match.json  fingerprint_miss.json  mod_238222.json  search_jei.json  search_sodium_slug.json
crates/empack-tests/fixtures/cassettes/loaders/: fabric_versions_1.21.1.json  forge_promotions.json  neoforge_versions.json  quilt_versions.json
crates/empack-tests/fixtures/cassettes/minecraft/: version_manifest.json
crates/empack-tests/fixtures/cassettes/modrinth/: dependencies_AANobbMI.json  project_AANobbMI.json  search_sodium.json  version_file_sha1.json  versions_AANobbMI.json  versions_sodium.json
crates/empack-tests/src/: e2e.rs  fixtures.rs  lib.rs  test_env.rs
crates/empack-tests/tests/: add_command.rs  add_matrix.rs  build_client_full.rs  build_command.rs  build_continue.rs  build_matrix.rs  build_server.rs  build_server_full.rs  build_with_missing_template.rs  clean_command.rs  dry_run_matrix.rs  e2e_add.rs  e2e_build.rs  e2e_exit_codes.rs  e2e_import_build.rs  e2e_init.rs  e2e_interactive.rs  e2e_live_import.rs  e2e_matrix.rs  e2e_restricted_build.rs  e2e_version.rs  hermetic_e2e.rs  init_error_recovery.rs  init_matrix.rs  init_workflows.rs  lifecycle_forge_full.rs  remove_command.rs  requirements_command.rs  sync_workflow.rs  version_command.rs
crates/empack/src/: main.rs
docs/: ARCHITECTURAL_DECISION_RECORD.md  testing.md  usage.md
docs/audits/: spec-src-baseline-2026-04-11.md
docs/reference/: CURSEFORGE.md  MODRINTH.md  historical-adr.md
docs/specs/: build-and-distribution.md  cli-surface.md  config-and-manifest.md  dependency-graph.md  display.md  import-pipeline.md  logging-and-telemetry.md  networking-and-rate-budgets.md  overview.md  platform-and-managed-tooling.md  platform-curseforge.md  platform-modrinth.md  search-and-resolution.md  session-providers.md  session-security.md  state-machine.md  terminal.md  testing-architecture.md  types.md
docs/testing/: README.md  (+1 more)
lib/: builds.sh  deps.sh  init.sh  logger.sh  templates.sh  utils.sh
reports/: architecture.md  audit.md  production.md  reference.md  status.md  testing.md  types.md
scripts/: import-smoke-test.py  modpack-survey.py  record-vcr-cassettes.sh
src/: main.rs
v1/: README.md  empack
v2/: empack.sh  empack_reader.sh  fuzz_match.sh  install_mods.sh  remote_resolver.sh  search_curseforge.sh  search_modrinth.sh  terminal_detection.bak.sh  terminal_detection.bak2.sh  terminal_detection.sh
(+74 files in other folders)
