[workspace]
resolver = "2"
members = [
    "crates/empack-lib",
    "crates/empack",
    "crates/empack-tests",
]

[workspace.package]
authors = ["mannie.exe <mannie@inherent.design>"]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/inherent-design/empack"
version = "0.0.0-alpha.1"

[workspace.dependencies]
empack-lib = { path = "crates/empack-lib" }

# External dependencies (versions shared across workspace)
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive", "env", "unicode", "wrap_help"] }
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
dirs = "5.0.1"
dotenvy = "0.15.7"
envy = "0.4.2"
html-escape = "0.2.13"
indicatif = { version = "0.17.11", features = ["rayon", "improved_unicode"] }
percent-encoding = "2.3.2"
petgraph = "0.6.5"  # Graph data structures for dependency resolution
reqwest = { version = "0.12.26", features = ["json", "gzip", "blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde-saphyr = "0.0.11"  # Replacement for deprecated serde_yaml
sha2 = "0.10.8"  # SHA-256 for HTTP cache keys
strsim = "0.11"  # Fuzzy string matching for Phase 1
thiserror = "2.0.17"
toml = "0.8.23"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower_governor = "0.4.2"  # Rate limiting middleware
tracing = "0.1.44"
tracing-indicatif = "0.3.14"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json", "local-time", "time", "smallvec", "parking_lot"] }
windows-core = "0.61.2"

# Dev dependencies
criterion = "0.6.0"
mockito = "1.7.0"
tempfile = "3.23.0"

# Platform-specific dependencies
libc = "0.2.178"
windows-sys = { version = "0.60.2", features = ["Win32_System_SystemInformation", "Win32_Foundation", "Win32_Globalization", "Win32_System_Console"] }
