[workspace]
resolver = "2"
members = ["crates/empack-lib", "crates/empack", "crates/empack-tests"]

[workspace.package]
authors = ["mannie.exe <mannie@inherent.design>"]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/inherent-design/empack"
version = "0.2.0-alpha.1"

[workspace.dependencies]
empack-lib = { path = "crates/empack-lib", default-features = true }

# External dependencies (versions shared across workspace)
anyhow = "1.0.102"
clap = { version = "4.6.0", features = [
    "derive",
    "env",
    "unicode",
    "wrap_help",
] }
dialoguer = { version = "0.12.0", features = ["fuzzy-select"] }
directories = "6.0.0"
dotenvy = "0.15.7"
envy = "0.4.2"
html-escape = "0.2.13"
indicatif = { version = "0.18.4", features = ["rayon", "improved_unicode"] }
percent-encoding = "2.3.2"
petgraph = "0.8.3" # Graph data structures for dependency resolution
quick-xml = { version = "0.39.2", features = ["serialize"] } # XML parsing for Forge maven-metadata
reqwest = { version = "0.13.2", features = ["json", "gzip", "blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde-saphyr = "0.0.22" # Replacement for deprecated serde_yaml
semver = "1"
sha1 = "0.10.6" # SHA-1 for Mojang server JAR verification
sha2 = "0.10.9" # SHA-256 for HTTP cache keys
murmur2 = "0.1" # Murmur2 hash for CurseForge fingerprint API
thiserror = "2.0.18"
toml = "1.0.7"
tokio = { version = "1.50.0", features = ["full"] }
terminal_size = "0.4"
tower = "0.5.3"
tower_governor = "0.8.0" # Rate limiting middleware
tracing = "0.1.44"
tracing-indicatif = "0.3.14"
tracing-subscriber = { version = "0.3.23", features = [
    "env-filter",
    "json",
    "local-time",
    "time",
    "smallvec",
    "parking_lot",
] }
windows-core = "0.62.2"
zip = { version = "8.2", default-features = false, features = ["deflate"] } # Zip create/extract for mrpack and distribution archives
tar = "0.4" # Tar archive creation for .tar.gz distribution fallback
flate2 = "1.1" # Gzip compression paired with tar
sevenz-rust2 = { version = "0.20", default-features = false, features = ["compress", "util"] } # 7z archive support; util enables compress_to_path helper
handlebars = "6.4.0"

# Dev dependencies
criterion = "0.8.2"
mockito = "1.7.2"
tempfile = "3.27.0"

# Platform-specific dependencies
libc = "0.2.183"
windows-sys = { version = "0.61.2", features = [
    "Win32_System_SystemInformation",
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_System_Console",
] }
