[package]
name = "empack-lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/inherent-design/empack/crates/empack-lib"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
dialoguer = { workspace = true }
dotenvy = { workspace = true }
envy = { workspace = true }
html-escape = { workspace = true }
indicatif = { workspace = true }
percent-encoding = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
tracing-indicatif = { workspace = true }
tracing-subscriber = { workspace = true }
windows-core = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[target."cfg(unix)".dependencies]
libc = { workspace = true }

[target."cfg(windows)".dependencies]
windows-sys = { workspace = true }

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-pc-windows-msvc", "x86_64-apple-darwin"]
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["+nightly", "--no-deps"]
