[package]
name = "empack-lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/inherent-design/empack/crates/empack-lib"

[features]
test-utils = []

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
dialoguer = { workspace = true }
directories = { workspace = true }
dotenvy = { workspace = true }
envy = { workspace = true }
html-escape = { workspace = true }
indicatif = { workspace = true }
percent-encoding = { workspace = true }
petgraph = { workspace = true }
quick-xml = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-saphyr = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-indicatif = { workspace = true }
tracing-subscriber = { workspace = true }
windows-core = { workspace = true }
tempfile = { workspace = true }
handlebars = { workspace = true }
semver = { workspace = true }
zip = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
sevenz-rust2 = { workspace = true }

[dev-dependencies]
mockito = { workspace = true }

[target."cfg(unix)".dependencies]
libc = { workspace = true }

[target."cfg(windows)".dependencies]
windows-sys = { workspace = true }

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-pc-windows-msvc", "x86_64-apple-darwin"]
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["+nightly", "--no-deps"]
