[package]
name = "empack-tests"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
directories.workspace = true
empack-lib = { workspace = true, features = ["test-utils"] }
indicatif.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true

[dev-dependencies]
mockito.workspace = true
